--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -468,6 +468,9 @@ aurorapy==0.2.7
 # homeassistant.components.autarco
 autarco==2.0.0
 
+# homeassistant.components.husqvarna_automower_ble
+automower-ble==0.1.35
+
 # homeassistant.components.axis
 axis==62
 
